MacOS Metal: Memory leak when rendering long animations in Eevee. #107704

Closed
opened 2023-05-07 14:22:02 +02:00 by William Reynish · 6 comments

System Information
Operating system: macOS-13.1-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Max Apple 4.1 Metal - 83

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-05 17:36, hash: d1bfda16bb90
Worked: N/A

Short description of error
On MacOS using latest master, if I use the Metal backend, rendering long animations in Eevee. will cause the memory pressure to keep rising until Blender crashes.

Exact steps for others to reproduce the error

  1. Open the attached Blender file.
  2. Make sure you are using the OpenGL backend in Preferences.
  3. Do an animation render.
  4. Observe that the memory pressure stays even and low.
  5. Switch to the Metal backend in Preferences. Restart Blender.
  6. Do an animation render.
  7. Observe that the memory pressure keeps rising. On my M1 Max MacBook Pro with 64 GB of memory, the system starts to lock up when Blender balloons to using 110+ GB of memory.
**System Information** Operating system: macOS-13.1-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Max Apple 4.1 Metal - 83 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-05 17:36, hash: `d1bfda16bb90` Worked: N/A **Short description of error** On MacOS using latest master, if I use the Metal backend, rendering long animations in Eevee. will cause the memory pressure to keep rising until Blender crashes. **Exact steps for others to reproduce the error** 1. Open the attached Blender file. 2. Make sure you are using the OpenGL backend in Preferences. 3. Do an animation render. 4. Observe that the memory pressure stays even and low. 5. Switch to the Metal backend in Preferences. Restart Blender. 6. Do an animation render. 7. Observe that the memory pressure keeps rising. On my M1 Max MacBook Pro with 64 GB of memory, the system starts to lock up when Blender balloons to using 110+ GB of memory.
William Reynish added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-07 14:22:03 +02:00

I have the same configuration and the identical problem when using Cycles... will try turning off the Metal backend to see if it is a temp by pass.

I have the same configuration and the identical problem when using Cycles... will try turning off the Metal backend to see if it is a temp by pass.

Changing the backend to OpenGL from Metal solved the issue for Cycles as well... good to know and will wait for an update to Blender. The leak is definitely connected to the mew release of the Metal backend feature. At least for now I can continue my project.

Changing the backend to OpenGL from Metal solved the issue for Cycles as well... good to know and will wait for an update to Blender. The leak is definitely connected to the mew release of the Metal backend feature. At least for now I can continue my project.
Member

@mano-wii , can you check?

@mano-wii , can you check?

I can confirm the gradual increase in memory while rendering the animation using the attached file.
With OpenGL, according to the activity monitor, the memory is between 1.3-1.5 GiB during the entire rendering.
With Metal, the memory goes up gradually, starting from 1.3 and going up to 5 GiB at frame 387 for example.

I can confirm the gradual increase in memory while rendering the animation using the attached file. With OpenGL, according to the activity monitor, the memory is between 1.3-1.5 GiB during the entire rendering. With Metal, the memory goes up gradually, starting from 1.3 and going up to 5 GiB at frame 387 for example.
Germano Cavalcante added
Status
Confirmed
Module
EEVEE & Viewport
and removed
Status
Needs Triage
labels 2023-05-10 16:18:03 +02:00

I have another small file here that exhibits the same issue.

  • When using OpenGL, memory usage is stable at around 2GB
  • When using Metal, memory usage keeps rising until it has used all the swap and tops out at 120 GB before it locks up the system.
I have another small file here that exhibits the same issue. - When using OpenGL, memory usage is stable at around 2GB - When using Metal, memory usage keeps rising until it has used all the swap and tops out at 120 GB before it locks up the system.

I am continuing to face the same issue even with OpenGL selected. When rendering a 100 frame animation using cycles. I would provide the file however it is confidential client material. It is a character mesh with the new quick fur applied.

Mac Studio M1 Max 32 Core GPU 64GB Ram - Using only the GPU for render

I am continuing to face the same issue even with OpenGL selected. When rendering a 100 frame animation using cycles. I would provide the file however it is confidential client material. It is a character mesh with the new quick fur applied. Mac Studio M1 Max 32 Core GPU 64GB Ram - Using only the GPU for render
Germano Cavalcante added the
Platform
macOS
label 2023-05-22 23:17:08 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-01 15:48:40 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107704
No description provided.